[package]
name = "test_double"
version = "0.2.1"
authors = ["Jason Grlicky <jason@paracosm.us>"]
description = "Procedural macro for substituting one type for another when testing."
keywords = ["mock", "test", "testing", "TDD"]
categories = ["development-tools::testing"]
readme = "README.md"
repository = "https://github.com/pcsm/test_double"
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
prefix-mock = []

[dependencies]
syn = { version = "0.15", features = ["full"] }
proc-macro2 = "0.4"
quote = "0.6"

[lib]
proc-macro = true