[package]
name = "test_double"
version = "0.3.0"
authors = ["Jason Grlicky <jason@paracosm.us>"]
description = "Procedural macro for substituting one type for another when testing."
keywords = ["mock", "test", "testing", "TDD"]
categories = ["development-tools::testing"]
readme = "README.md"
repository = "https://github.com/pcsm/test_double"
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
syn = { version = "1.0.15", features = ["full"] }
proc-macro2 = "1.0.8"
quote = "1.0.2"

[dev-dependencies]
static_assertions = "1.1.0"

[lib]
proc-macro = true